Agregados cambios sugeridos por Sonarlint